--- a/src/components/sections/hero/Hero.module.scss
+++ b/src/components/sections/hero/Hero.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  z-index: 1; // Герой должен быть ПОД подменю
   overflow: hidden;
   background: var(--bg-primary);
 
